fix(print): Fix the text visible at the print head - Previous fix was not good

--- a/assets/stylesheets/print.scss
+++ b/assets/stylesheets/print.scss
@@ -2,9 +2,8 @@
   size: A4 portrait;
 }
 aside,
-input,
-label,
 #default,
+footer,
 .hide,
 .print_hide {
   display: none;
